# regina

./: CHANGES.txt  CMakeLists.txt
Regina.xcodeproj/: project.pbxproj
engine/enumerate/: treeconstraint-impl.h  treeconstraint.h  treelp-impl.h  treelp.h  treetraversal-impl.h  treetraversal.h
engine/maths/: laurent.h  laurent2.h  polynomial.h
engine/testsuite/compile-time/: CMakeLists.txt  treeconstraint.cpp
engine/triangulation/: component.h  simplex.h
engine/utilities/bxzstr/: stream_wrapper.hpp
preconfig/xcode/: common.xcconfig
python/: helpers.h
python/docstrings/enumerate/: treeconstraint.h  treelp.h  treetraversal.h
python/docstrings/maths/: laurent.h  laurent2.h  polynomial.h
python/enumerate/: treeconstraint.cpp  treelp.cpp  treetraversal.cpp
python/maths/: laurent.cpp  laurent2.cpp  polynomial.cpp
python/testsuite/: alltypes.out  readsiglist.test  refs.test  utf8.test
qtui/: CMakeLists.txt  actions.cpp  coordinatechooser.h  elidedlabel.h  examplesaction.cpp  examplesaction.h  introdialog.cpp  introdialog.h  newpacketdialog.cpp  newpacketdialog.h  packeteditiface.cpp  packeteditiface.h  packettabui.cpp  packettabui.h  packettreeview.cpp  packettreeview.h  packetui.cpp  packetui.h  packetwindow.cpp  packetwindow.h  patiencedialog.h  progressdialogs.cpp  progressdialogs.h  recentfilesaction.cpp  recentfilesaction.h  reginaabout.cpp  reginaabout.h  reginamain.cpp  reginamain.h  reginamanager.h  reginapref.cpp  reginapref.h  reginaprefset.h  shortrunner.h
qtui/choosers/: trisigchooser.cpp
qtui/packets/: anglesui.cpp  anglesui.h  attachmentui.cpp  attachmentui.h  censuswidget.h  compatcanvas.h  eltmovedialog2.cpp  eltmovedialog2.h  eltmovedialog3.cpp  eltmovedialog3.h  eltmovedialog4.cpp  eltmovedialog4.h  facetgraphtab.cpp  facetgraphtab.h  filtercomb.cpp  filtercomb.h  filterprop.cpp  filterprop.h  gaprunner.cpp  gaprunner.h  groupwidget.cpp  groupwidget.h  hypercompatui.cpp  hypercompatui.h  hypercoordinateui.cpp  hypercoordinateui.h  hypermatchingui.cpp  hypermatchingui.h  hypersummaryui.h  hyperui.cpp  hyperui.h  linkalgebra.h  linkcodes.cpp  linkcodes.h  linkcreator.cpp  linkcrossings.cpp  linkcrossings.h  linkgraph.cpp  linkgraph.h  linkmovedialog.cpp  (+58 more)
qtui/python/: commandedit.cpp  commandedit.h  pythonconsole.cpp
qtui/src/packets/: anglesui.h  facetgraphtab.cpp  linkgraph.cpp
utils/: CMakeLists.txt  bogocheck.cpp  dgt.cpp  gluinggraph.cpp  gluinggraph.h  katie.cpp  knottedsurfaces.cpp  knottedsurfaces.h  surfacefinder.cpp  surfaceknots.cpp  surfaceknots.h
utils/surfacefinder/: CMakeLists.txt  README.md  bogocheck.cpp  buildknot.cpp  cobordismbuilder.cpp  cobordismbuilder.h  cobordismbuilder_test.cpp  collar.h  embeddedsubmanifold.cpp  embeddedsubmanifold.h  embeddingsearch.cpp  embeddingsearch.h  enumerate_cis.h  fill3manifold.cpp  fillmanifold.cpp  gluing.h  gluinggraph.h  gluinggraph_test.cpp  knot_complement.cpp  knotbuilder.cpp  knotbuilder.h  knotbuilder_test.cpp  knottedsurfaces.bak  knottedsurfaces.h  linkcomplement.h  searchforembedded.cpp  simplicialprism.h  skeleton.h  surfacefinder.cpp  surfacefinder.h  testfile.cpp  testfile.h  triangulateknot.cpp
utils/surfacefinder/tests/: CMakeLists.txt  cobordismbuilder_test.cpp  embeddedsubmanifold_test.cpp  embeddingsearch_test.cpp  gluinggraph_test.cpp  knotbuilder_test.cpp  surfacefinder_2d_test.cpp  surfacefinder_invariants_test.cpp  surfacefinder_test.cpp  triangulate_knot_table.cpp
utils/surfer/: CMakeLists.txt  README.md  all_sat.py  bogocheck.cpp  cobordismbuilder.cpp  cobordismbuilder.h  collar.cpp  collar.h  embeddedsubmanifold.cpp  embeddedsubmanifold.h  embeddingsearch.cpp  embeddingsearch.h  enumerate_cis.cpp  enumerate_cis.h  fillmanifold.cpp  knot_builder_simplified.py  knotbuilder.cpp  linkcomplement.cpp  rollbackunionfind.cpp  rollbackunionfind.h  seededsearch.h  simplicialprism.cpp  simplicialprism.h  skeleton.cpp  skeleton.h  surfer.cpp  triangulateknot.cpp
utils/surfer/tests/: CMakeLists.txt  cobordismbuilder_test.cpp  embeddedsubmanifold_test.cpp  embeddingsearch_test.cpp  knotbuilder_test.cpp  profile_driver.cpp  rollbackunionfind_test.cpp  triangulate_knot_table.cpp
